# hockey

./: data_clean.py  model.ipynb  models.py  pyproject.toml
data/: cleaned_games.csv  games.csv  teams.txt
