[project]
name = "hockey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arviz>=1.1.0",
    "jax<=0.10.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "numpyro>=0.20.1",
    "polars>=1.40.1",
    "scikit-learn>=1.8.0",
]
